# FlaskAppSimpleTemplate

./: .flake8  .gitignore  README.md  alembic.ini  dev.json  prod.json  pyproject.toml  run.py
.github/workflows/: test.yaml
app/: context.py  orm.py  wsgi.py
app/migrations/: env.py
hooks/: pre-commit
scripts/: install.sh  lint.sh
