[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
flake8 = "^3.8.3"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
